brat/test/golden/error/duplicate_decl.brat
inc(Int) -> Int
inc(x) = succ(x)

inc(Int) -> Int
inc(x) = succ(succ(x))
